refactor : "관리자 페이지 리로드 수정"

--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -4,6 +4,7 @@
 </head>
 <head>
     <link href="/css/adminPage.css" rel="stylesheet" type="text/css">
+    <link href="/css/index.css" rel="stylesheet">
 </head>
 
 <body>
