--- a/src/main/resources/templates/my-accommodation-list.html
+++ b/src/main/resources/templates/my-accommodation-list.html
@@ -32,6 +32,7 @@
             <!-- accommodation 리스트 반복 -->
             <div class="col-12" th:each="accommodation : ${myAccommodations}">
                 <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
+                    <a th:href="@{${'/accommodation/' + accommodation.getAccommodationId()}}">
                     <div class="service-icon p-4">
                         <i class="fa fa-globe fa-4x text-primary"></i>
                     </div>
@@ -55,7 +56,9 @@
                             </div>
                         </div>
                     </div>
+                    </a>
                 </div>
+                </a>
             </div>
         </div>
         <div class="col-12">
