--- a/src/main/resources/templates/accommodation-register.html
+++ b/src/main/resources/templates/accommodation-register.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko-KR" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{/layout/head::headFragment}"></head>
+<head th:replace="~{layout/head::headFragment}"></head>
 <body>
 
-<div th:replace="~{/layout/top-bar :: top}"></div>
-<div th:replace="~{/layout/navigation-bar :: nav}"></div>
+<div th:replace="~{layout/top-bar :: top}"></div>
+<div th:replace="~{layout/navigation-bar :: nav}"></div>
 
 
     <!-- Header Start -->
@@ -29,7 +29,7 @@
                 <div class="row g-3">
                     <div class="col-md-3">
                         <label class="form-label" for="imageInput">이미지 업로드</label>
-                        <input accept="image/*" class="form-control" id="imageInput" multiple onchange="addFile(this);" type="file" name="file">
+                        <input accept="image/*" class="form-control" id="imageInput" multiple name="file" onchange="addFile(this);" type="file">
                     </div>
                     <div class="col-md-9"></div> <!-- 공백 위한 것 -->
                     <div class="col-md-2">
@@ -158,7 +158,7 @@
     </div>
     <!-- Tour Booking End -->
 
-<footer th:replace="~{/layout/footer::footerFragment}"></footer>
+<footer th:replace="~{layout/footer::footerFragment}"></footer>
 
 
 <!-- Back to Top -->
