--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko-KR" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{/layout/head::headFragment}">
+<head th:replace="~{layout/head::headFragment}">
 </head>
 <head>
     <link href="/css/adminPage.css" rel="stylesheet" type="text/css">
@@ -9,8 +9,8 @@
 
 <body>
 
-<div th:replace="~{/layout/top-bar :: top}"></div>
-<div th:replace="~{/layout/navigation-bar :: nav}"></div>
+<div th:replace="~{layout/top-bar :: top}"></div>
+<div th:replace="~{layout/navigation-bar :: nav}"></div>
 
 <!-- Tour Booking Start (검색) -->
 <div class="container-fluid booking py-5">
@@ -66,7 +66,7 @@
                         <td th:text="${#strings.substring(member.createdAt, 0, 10)}"></td>
                         <td th:text="${#strings.substring(member.updatedAt, 0, 10)}"></td>
                         <td>
-                            <button class="btn btn-danger red cancel-register deleteButton" type="button" th:value="${member.id}">탈퇴</button>
+                            <button class="btn btn-danger red cancel-register deleteButton" th:value="${member.id}" type="button">탈퇴</button>
                         </td>
                     </tr>
                     </tbody>
@@ -102,7 +102,7 @@
 
 
 
-<footer th:replace="~{/layout/footer::footerFragment}"></footer>
+<footer th:replace="~{layout/footer::footerFragment}"></footer>
 
 
 <!-- Back to Top -->
