--- a/src/main/resources/templates/review-register.html
+++ b/src/main/resources/templates/review-register.html
@@ -31,8 +31,8 @@
 
 <body>
 
-<div th:replace="~{/layout/top-bar :: top}"></div>
-<div th:replace="~{/layout/navigation-bar :: nav}"></div>
+<div th:replace="~{layout/top-bar :: top}"></div>
+<div th:replace="~{layout/navigation-bar :: nav}"></div>
 
 <!-- Review Start -->
 <div class="container-fluid contact bg-light py-5">
@@ -89,7 +89,7 @@
 </div>
 <!-- Review End -->
 
-<footer th:replace="~{/layout/footer::footerFragment}"></footer>
+<footer th:replace="~{layout/footer::footerFragment}"></footer>
 
 <!-- Back to Top -->
 <a class="btn btn-primary btn-primary-outline-0 btn-md-square back-to-top" href="#"><i class="fa fa-arrow-up"></i></a>
