--- a/src/main/resources/templates/list-page.html
+++ b/src/main/resources/templates/list-page.html
@@ -106,7 +106,7 @@
             th:class="${pageNum == currentPage + 1} ? 'page-item active' : 'page-item'"
             th:each="pageNum : ${#numbers.sequence(1, totalPages)}"
             th:if="${pageNum >= currentPage - 3 and pageNum <= currentPage + 3}">
-            <a class="page-link" th:href="@{${'/accommodation?keyword=' + request.getKeyword() + '&startDate=' + request.getStartDate + '&endDate=' + request.getEndDate + '&page=' + pageNum}}" th:text="${pageNum}"></a>
+            <a class="page-link" th:href="@{${'/accommodation?keyword=' + request.getKeyword() + '&startDate=' + request.getStartDate + '&endDate=' + request.getEndDate + '&page=' + (pageNum - 1)}}" th:text="${pageNum}"></a>
         </li>
 
         <!-- 다음 페이지 버튼 -->
