--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko-KR" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko-KR" xmlns:sec="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="~{layout/head::headFragment}"></head>
 
@@ -162,24 +162,27 @@
                     <div class="row g-3">
                         <div class="border border-primary rounded p-3" th:each="review:${reviewList}" th:unless="${review.isDeleted}">
                             <div class="container py-5">
-                                <div class="row g-3">
-                                    <div class="col-md-6 text-md-start text-center" style="font-size: 20px;"
+                                <div class="row g-3 d-flex">
+                                    <div class="col-md-6" style="font-size: 20px;"
                                          th:text="${review.roomTitle}">
                                     </div>
-                                    <div class="col-md-6 text-md-end text-center">
+                                    <div class="col-md-6 justify-content-between">
                                         <div class="row g-3">
-                                            <div class="col-md-3" style="font-size: 15px;"
-                                                 th:text="${review.getMemberName()}">
+                                            <div class="col-md-2" style="font-size: 15px;" th:text="'글쓴이 : ' + ${review.getMemberName()}">
                                             </div>
-                                            <div class="col-md-3" style="font-size: 15px;"
-                                                 th:text="'생성일자 : '+ ${review.getFormattedCreatedAt()}">
+                                            <div class="col-md-2" style="font-size: 15px;"
+                                                 th:text="'작성일 : '+ ${review.getFormattedCreatedAt()}">
                                             </div>
-                                            <div class="col-md-3" style="font-size: 15px;"
-                                                 th:text="'수정일자 : '+ ${review.getFormattedUpdatedAt()}">
+                                            <div class="col-md-2" style="font-size: 15px;"
+                                                 th:text="'수정일 : '+ ${review.getFormattedUpdatedAt()}">
                                                 수정일
                                             </div>
-                                            <div class="col-md-3" style="font-size: 15px;"
-                                                 th:text="'별점'+ ${review.getScore()}">
+                                            <div class="col-md-2" style="font-size: 15px;"
+                                                 th:text="'별점 : '+ ${review.getScore()}">
+                                            </div>
+                                            <div class="btn-area col-md-2">
+                                                <button class="btn btn-primary" type="button">Button</button>
+                                                <button class="btn btn-primary" type="button">Button</button>
                                             </div>
                                         </div>
                                     </div>
