--- a/src/main/resources/templates/my-accommodation-list.html
+++ b/src/main/resources/templates/my-accommodation-list.html
@@ -56,6 +56,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="row mb-3"></div> <!-- 여백을 추가할 빈 줄 -->
             </div>
         </div>
         <div class="col-12">
