--- a/src/main/resources/templates/review-register.html
+++ b/src/main/resources/templates/review-register.html
@@ -1,34 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <title>Travela - Tourism Website Template</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
-
-    <!-- Google Web Fonts -->
-    <link href="https://fonts.googleapis.com" rel="preconnect">
-    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500;600&family=Roboto&display=swap" rel="stylesheet">
-
-    <!-- Icon Font Stylesheet -->
-    <link href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" rel="stylesheet"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-
-    <!-- Libraries Stylesheet -->
-    <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
-
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Template Stylesheet -->
-    <link href="/css/style.css" rel="stylesheet">
-</head>
-
+<html lang="ko-KR" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{layout/head::headFragment}"></head>
 <body>
 
 <div th:replace="~{layout/top-bar :: top}"></div>
@@ -41,11 +13,10 @@
             <h5 class="section-title px-3">Review</h5>
             <h1 class="mb-0">솔직한 후기를 작성해 주세요!</h1>
         </div>
-        <form enctype="multipart/form-data" th:action="@{/review/register/{acom_id}(acom_id=${acom_id})}" th:method="post">
+        <form enctype="multipart/form-data" th:action="@{/review/register/{accommodationId}(accommodationId=${accommodationId})}" th:method="post">
             <div class="row g-3">
                 <div class="col-md-5">
                     <label class="form-label" for="reviewTitle">리뷰할 방 선택</label>
-<!--                    <input type="text" class="form-control" id="reviewTitle" placeholder="리뷰 제목을 입력하세요" required>-->
                     <select class="form-control" id="reviewTitle" name="roomTitle" required>
                         <option th:each="roomName:${RoomNames}" th:text="${roomName}" th:value="${roomName}"></option>
                     </select>
@@ -53,13 +24,14 @@
                         const titleInput = document.getElementById('reviewTitle');
                         let inputValue = titleInput.options[titleInput.selectedIndex];
                         if(inputValue === undefined){
-                            alert('숙소를 예약한 적이 없어 리뷰등록이 불가합니다.');
+                            let text = !reviewWithImages ? '수정' : '등록';
+                            alert(`숙소를 예약한 적이 없어 리뷰 ${text}이 불가합니다.`);
                         }
-
                     </script>
                 </div>
                 <input name="accommodation" th:value="${accommodation}" type="hidden">
                 <input name="member" th:value="${member}" type="hidden">
+                <input name="id" th:value="${reviewWithImages?.getReviewId()}" type="hidden">
                 <div class="col-md-5">
                     <label class="form-label" for="imageUpload">이미지 업로드</label>
                     <input accept="image/*" class="form-control" id="imageUpload" multiple name="file" onchange="addFile(this);" type="file">
@@ -76,11 +48,14 @@
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="reviewContent">리뷰 내용</label>
-                    <textarea class="form-control" id="reviewContent" name="content" placeholder="리뷰 내용을 입력하세요" required rows="10"></textarea>
+                    <textarea class="form-control" id="reviewContent" name="content" placeholder="리뷰 내용을 입력하세요" required rows="10" th:text="${reviewWithImages?.getContent()}"></textarea>
                 </div>
                 <div class="col-12">
                     <div class="text-center">
-                        <button class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="" type="submit">리뷰 등록</button>
+                        <button class="btn btn-primary rounded-pill py-3 px-5 mt-2" th:switch="${reviewWithImages}" type="submit">
+                            <span th:case="null">등록</span>
+                            <span th:case="*">수정</span>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -93,16 +68,6 @@
 
 <!-- Back to Top -->
 <a class="btn btn-primary btn-primary-outline-0 btn-md-square back-to-top" href="#"><i class="fa fa-arrow-up"></i></a>
-
-
-<!-- JavaScript Libraries -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/lib/easing/easing.min.js"></script>
-<script src="/lib/waypoints/waypoints.min.js"></script>
-<script src="/lib/owlcarousel/owl.carousel.min.js"></script>
-<script src="/lib/lightbox/js/lightbox.min.js"></script>
-
 
 <!-- Template Javascript -->
 <script src="/js/main.js"></script>
