--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -103,7 +103,7 @@
                th:href="@{${accommodation.getId()}+'/'+${room.getRoomId()}+'/reservationPage'}">예약하기</a>
         </div>
         <div class="text-lg-end">
-            <button th:value="${room.getRoomId()}" class="room-manage-button btn btn-primary rounded-pill py-3 px-5 mt-2" type="button">버튼 텍스트</button>
+            <button th:value="${room.getRoomId()}" class="room-manage-button btn btn-primary rounded-pill py-3 px-5 mt-2" type="button">상태 변경</button>
         </div>
     </div>
 </div>
