--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -55,19 +55,24 @@
                     </thead>
                     <tbody>
                     <tr th:each="member : ${members}">
-                        <td th:text="${member.id}"></td>
                         <td th:text="${member.name}"></td>
-                        <td th:text="${member.role}"></td>
+                        <td th:switch="${#strings.toString(member.role)}">
+                            <span th:case="'USER'">사용자</span>
+                            <span th:case="'ADMIN'">관리자</span>
+                            <span th:case="'BUSINESS'">사업자</span>
+                            <span th:case="'LEAVER'">탈퇴자</span>
+                        </td>
 
                         <td>
-                            <select class="form-select bg-white border-0" th:id="'selectRole' + ${member.id}" onchange="updateRole(this)">
+                        <select class="form-select bg-white border-0" th:id="'selectRole' + ${member.id}" onchange="updateRole(this)">
                                 <option th:each="role : ${T(com.simsasookbak.member.domain.Role).values()}"
                                         th:unless="${role.name() == 'ADMIN'}"
                                         th:value="${role.name()}"
-                                        th:text="${role.name()}"
+                                        th:text="${role.name() == 'LEAVER' ? '탈퇴자' : role.name() == 'BUSINESS' ? '숙박업자' : role.name() == 'USER' ? '사용자' : role.name()}"
                                         th:data-member-id="${member.id}"
                                         th:data-role-name="${role}">
                                 </option>
+
                             </select>
                         </td>
                         <td th:text="${member.birthDate}"></td>
