feat: 숙소, 객실 삭제 타임리프까지 완성

--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -79,7 +79,7 @@
 <!-- details End -->
 
 <div class="container-fluid contact bg-light py-5">
-    <div class="container py-5" th:each="room:${roomList}">
+    <div class="container py-5" th:each="room:${roomList}" th:if="${room.getMemberId() eq #authentication.principal.id or !room.isDeleted()}">
         <div class="row g-5 align-items-center">
             <div class="col-lg-7 room-condition">
                 <h1 class="mb-4" th:text="${room.name}"></h1>
@@ -95,10 +95,11 @@
                         </p>
                     </div>
                 </div>
+                <div lass="text-lg-end" class="text-lg-end"></div>
             </div>
         </div>
         <div class="text-lg-end" sec:authorize="hasAuthority('BUSINESS')">
-            <a class="btn btn-primary rounded-pill py-3 px-5 mt-2"
+            <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" th:if="${room.getMemberId() eq #authentication.principal.id}"
                th:href="@{'/'+${room.getRoomId()}+'/roomUpdatePage'}">객실 수정</a>
         </div>
         <div class="text-lg-end">
@@ -107,6 +108,9 @@
         </div>
         <div class="text-lg-end">
             <button th:value="${room.getRoomId()}" class="room-manage-button btn btn-primary rounded-pill py-3 px-5 mt-2" type="button">상태 변경</button>
+        </div>
+        <div class="text-lg-end">
+            <span th:value="${room.getRoomId()}" th:if="${room.getMemberId() eq #authentication.principal.id}" th:text="${room.isDeleted() ? '폐쇄' : '개방'}" >숙박업자한테 보이는 창</span>
         </div>
     </div>
 </div>
@@ -226,7 +230,7 @@
     $(document).on('click', '.room-manage-button', function() {
         const roomId = parseInt($(this).val(), 10);
 
-        var confirmMessage = "방을 예약을 활성화/비활성화 하시겠습니까?";
+        var confirmMessage = "객실을 활성화/비활성화 하시겠습니까? 객실은 한개 이상 존재해야 합니다";
         if (confirm(confirmMessage)) {
             $.ajax({
                 type: 'POST',
